src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clcommon__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Legal_Entity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity Type</label>
        <referenceTo>clcommon__Legal_Entity__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>genesis__SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Coborrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coborrower</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Coborrower</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Employer__c</fullName>
        <description>Contact&apos;s Employer field for Lenddo verification.</description>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Is_Lenddo_Verified__c</fullName>
        <description>Check box to determine if the contact information is sent to Lenddo for verification vis the Lenddo Button or not.</description>
        <inlineHelpText>Check box to determine if the contact information is sent to Lenddo for verification via the Lenddo Button or not. Checked if contact info and social networking site credentials have been sent to Lenddo.</inlineHelpText>
        <label>Is Lenddo Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SSN__c</fullName>
        <label>SSN(deprecated)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__University__c</fullName>
        <description>Contact University field for Lenddo verification.</description>
        <label>University</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Contact_Type__c</fullName>
        <description>Type of the contact</description>
        <inlineHelpText>Type of the contact</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <description>Payment mode, used to disburse payments back to broker.</description>
        <inlineHelpText>Payment mode, used to disburse payments back to broker.</inlineHelpText>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Tax_Id__c</fullName>
        <description>Tax Id of the broker</description>
        <inlineHelpText>Tax Id of the broker</inlineHelpText>
        <label>Tax Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>